--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "start": "next start"
   },
   "dependencies": {
-    "next": "beta",
+    "next": "^2.4.9",
     "react": "^15.6.1",
     "react-dom": "^15.6.1"
   }
