--- a/package.json
+++ b/package.json
@@ -7,10 +7,10 @@
     "node": "8.0.0"
   },
   "scripts": {
+    "postinstall": "npm run build",
     "dev": "next",
     "build": "next build",
-    "postinstall": "npm run build",
-    "start": "next start"
+    "start": "NODE_ENV=production node server"
   },
   "dependencies": {
     "next": "^2.4.9",
